--- a/style.css
+++ b/style.css
@@ -10,16 +10,6 @@ body {
 body {
     background: linear-gradient(45deg, #000000, hsl(0, 0%, 100%), #0000007b); /* Gradient background */
     background-size: 200% 200%; /* Double size for animation */
-    animation: backgroundAnimation 5s infinite alternate;
-}
-
-@keyframes backgroundAnimation {
-    0% {
-        background-position: 0% 0%;
-    }
-    100% {
-        background-position: 100% 100%;
-    }
 }
 
 header .logo {
@@ -363,13 +353,13 @@ section#education {
 .education-item {
     display: flex;
     align-items: center;
+    overflow: hidden;
     background: #ffffff;
-    padding: 15px;
+    padding: 20px;
     margin-bottom: 20px;
     border: 10px solid #ee3232;
     border-radius: 15px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    opacity: 0;
     transform: translateX(-20px);
     animation: slideIn 1s ease forwards;
     animation-delay: var(--animation-delay);
@@ -448,7 +438,7 @@ section#education {
 .about-content {
     display: flex;
     align-items: flex-start;
-    width: 90%;
+    width: 100%;
     overflow: hidden;
     background: #fff;
     border: 2px solid #333;
